--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,8 @@ source-dir = doc/
 build-dir = doc/build
 all_files = 1
 
+[bdist_wheel]
+universal = 1
+
 [upload_sphinx]
 upload-dir = doc/build/html
