Always depend on simplejson

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,12 @@
 envlist = py26, py27
 
 [testenv]
+deps = simplejson
 commands =
     python setup.py develop
     {envbindir}/python -m couchdb.tests
 
 [testenv:py26]
-deps =
-    simplejson
 commands =
     python setup.py develop
     {envbindir}/python -m couchdb.tests.__main__
