--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py33, py34, py33-json, py34-json
+envlist = py26, py27, py33, py34, py33-json, py34-json, py35-json
 
 [testenv]
 deps = simplejson
@@ -19,3 +19,7 @@ deps =
 [testenv:py34-json]
 basepython = python3.4
 deps =
+
+[testenv:py35-json]
+basepython = python3.5
+deps = 
