Remove support for Python 2.6 and 3.x with x < 4

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,11 @@
 [tox]
-envlist = py26, py27, py33, py34, py33-json, py34-json, py35-json
+envlist = py27, py34, py34-json, py35-json
 
 [testenv]
 deps = simplejson
 commands =
     python --version
     {envbindir}/python -m couchdb.tests
-
-[testenv:py26]
-commands =
-    python --version
-    {envbindir}/python -m couchdb.tests.__main__
-
-[testenv:py33-json]
-basepython = python3.3
-deps =
 
 [testenv:py34-json]
 basepython = python3.4
